package com.events.core.messaging.subscriber;

public class BuiltInMessageHandlerDecoratorOrder {
  public static int PRE_POST_RECEIVE_MESSAGE_HANDLER_DECORATOR = 100;
  public static int DUPLICATE_DETECTING_MESSAGE_HANDLER_DECORATOR = 200;
  public static int PRE_POST_HANDLER_MESSAGE_HANDLER_DECORATOR = 300;
}
