package com.events.core.messaging.subscriber;

public interface MessageSubscription {

  void unsubscribe();
}
